--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/jspdf": "^1.3.3",
     "@types/multer": "^2.0.0",
     "@types/node": "20.6.2",
     "@types/nodemailer": "^6.4.17",
@@ -69,6 +70,8 @@
     "input-otp": "^1.2.4",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.446.0",
     "multer": "^2.0.1",
     "next": "13.5.1",
